# document-aligner

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  b64filter.cpp  docalign.cpp  docenc.cpp  docjoin.cpp
.github/workflows/: build.yaml
src/: document.cpp  document.h  ngram.h
tests/: CMakeLists.txt
tests/docalign/: diff.py  ref.txt  run.sh
